add contract sign
